--- a/package.json
+++ b/package.json
@@ -7,12 +7,16 @@
 		"test": "jest"
 	},
 	"dependencies": {
+		"firebase": "^4.3.1",
 		"react": "~15.4.1",
-		"react-native": "0.42.0"
+		"react-native": "0.42.0",
+		"react-redux": "^5.0.6",
+		"redux": "^3.7.2"
 	},
 	"devDependencies": {
 		"babel-jest": "21.0.2",
 		"babel-preset-react-native": "4.0.0",
+		"eslint-config-rallycoding": "^3.2.0",
 		"jest": "21.1.0",
 		"react-test-renderer": "~15.4.1"
 	},
