routes employee list

--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
 		"firebase": "^4.3.1",
 		"react": "~15.4.1",
 		"react-native": "0.42.0",
+		"react-native-router-flux": "3.35.0",
 		"react-redux": "^5.0.6",
-		"redux": "^3.7.2"
+		"redux": "^3.7.2",
+		"redux-actions": "^2.2.1",
+		"redux-logger": "^3.0.6",
+		"redux-promise-middleware": "^4.4.1",
+		"redux-thunk": "^2.2.0"
 	},
 	"devDependencies": {
 		"babel-jest": "21.0.2",
