--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"firebase": "^4.3.1",
 		"react": "~15.4.1",
 		"react-native": "0.42.0",
+		"react-native-communications": "^2.2.1",
 		"react-native-router-flux": "3.35.0",
 		"react-redux": "^5.0.6",
 		"redux": "^3.7.2",
