--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
 		"test": "jest"
 	},
 	"dependencies": {
+		"axios": "^0.16.2",
 		"firebase": "^4.3.1",
 		"react": "~15.4.1",
+		"react-apollo": "^1.4.15",
 		"react-native": "0.42.0",
 		"react-native-communications": "^2.2.1",
 		"react-native-router-flux": "3.35.0",
